[project]
name = "pypeline"
version = "0.1.0"
description = "A data pipelining application."
readme = "README.md"
license = 'GPL-3.0-or-later'
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "pyside6>=6.11.0",
    "requests>=2.33.1",
    "sqlmodel>=0.0.37",
]

[tool.uv]
system-certs = true

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "ty>=0.0.27",
]
